package com.diguage.didp.strategy;

/**
 * 具体算法 B
 *
 * @author D瓜哥, https://www.diguage.com/
 * @since 2017-05-16
 */
public class ConcreteStrategyB extends Strategy {
  public void algorithmInterface() {
    System.out.println("算法B实现");
  }
}
