package com.diguage.didp.strategy;

/**
 * Strategy 类
 *
 * @author D瓜哥, https://www.diguage.com/
 * @since 2017-05-23 09:09:50
 */
public abstract class Strategy {
  public abstract void algorithmInterface();
}
